--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu Portfólio</title>
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
   </head>
   <body>
     <header>
-      <a href="#home" class="logo">Victor<span style="color: orange;">.Dev</span></a>
+      <a href="#home" class="logo"
+        >Victor<span style="color: orange">.Dev</span></a
+      >
 
       <div class="nav">
         <a href="#home">Home</a>
         <a href="#about">Sobre</a>
         <a href="#habilidades">Habilidades</a>
-        <a href="#portfolio">Projetos</a>
+        <a href="#projects">Projetos</a>
         <a href="#contact">Contato</a>
       </div>
     </header>
@@ -25,9 +32,25 @@
       <div class="home-content">
         <h3><span>Olá</span>, me chamo Victor !</h3>
 
-        <h1>Sou Desenvolvedor <span style="color: orange;">Front-end</span></h1>
-        
-        <!-- <div class="social-media">
+        <h1>Sou Desenvolvedor <span style="color: orange">Front-end</span></h1>
+      </div>
+      <i class='bx bx-down-arrow-alt' style='color:#ffffff' ></i>
+    </section>
+    <!-- /home section -->
+
+    <!-- Sobre section -->
+    <section class="about" id="about">
+      <div class="about-content">
+        <h2>Sobre <span style="color: orange">Mim</span></h2>
+        <h3>web development Student</h3>
+
+        <p>
+          Olá, meu nome é Victor Soares Langkamer, Estou no Terceiro periodo de
+          Análise e Desenvolvimento de Sistemas no Centro Universitário Vale do
+          Cricaré. E tenho como foca da área de tecnologia e desenvolvimento a
+          área de Dev Front-end.
+        </p>
+        <div class="social-media">
           <a
             href="https://web.whatsapp.com/send?phone=27997436600"
             target="_blank"
@@ -36,21 +59,19 @@
           <a href="https://www.instagram.com/drxx__v1tuu" target="_blank"
             ><i class="bx bxl-instagram"></i
           ></a>
-          <a href="https://github.com/V1tito" target="_blank"
+          <a href="https://github.com/VitorLangkamer" target="_blank"
             ><i class="bx bxl-github"></i
           ></a>
-        </div> -->
+        </div>
 
-        <!-- <div>
-          <a href="#" class="btn">Donwload CV</a>
-        </div> -->
+        <a href="#habilidades" class="btn">Saiba Mais</a>
       </div>
     </section>
-    <!-- /home section -->
+    <!-- /Sobre section -->
 
     <!-- habilidade section -->
     <section class="habilidades" id="habilidades">
-      <h2>Minhas <span style="color: orange;">Habilidades</span></h2>
+      <h2>Minhas <span style="color: orange">Habilidades</span></h2>
 
       <div class="Habilites-container">
         <div class="habilites-box">
@@ -58,7 +79,9 @@
           <h3>Informática Básica</h3>
 
           <p>
-            Possuo conhecimento básico em informática, sendo Formatação de computadores, instalacao de sistemas operacionais
+            Possuo conhecimento básico em informática, sendo Formatação de
+            computadores, instalação de sistemas operacionais, utilização de
+            softwares como o pacote office.
           </p>
         </div>
 
@@ -67,82 +90,82 @@
           <h3>Desenvolvimento Web</h3>
 
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-            aut, quaerat ipsum sequi delectus ea eum voluptatibus a quas
-            inventore, incidunt dolor expedita repudiandae commodi quibusdam
-            vero nesciunt officia repellat!
+            Tenho experiência em desenvolvimento web, com foco em HTML, CSS e
+            JavaScript. Atualmente estou estudando tecnologias e blibliotecas
+            como React, Typescript e Bootstrap.
           </p>
-
-          <a href="#" class="btn">Saiba Mais</a>
         </div>
 
         <div class="habilites-box">
-          <i class="bx bx-block"></i>
-          <h3>Em Breve!</h3>
+          <i class='bx bx-code-alt'></i>
+          <h3>Projetos</h3>
 
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
-            culpa reprehenderit. Beatae ea ab quae, officia consequuntur
-            repellat ipsam odio quod, eaque harum dolor deserunt ipsum
-            voluptates exercitationem sunt reiciendis.
+            Nestes ultimos meses, venho desenvolvendo projetos pessoais e
+            acadêmicos, com o objetivo de aprimorar minhas habilidades e
+            conhecimentos na área de desenvolvimento web.
           </p>
 
-          <a href="#" class="btn">Saiba Mais</a>
+          <a href="#projects" class="btn">Ver projetos</a>
         </div>
       </div>
     </section>
-    <!-- /Service section -->
+    <!-- /habilidade section -->
 
-    <!-- portifolio section -->
-    <section class="portfolio" id="portfolio">
-      <h2>Últimos Avanços</h2>
-      <div class="portfolio-container">
-        <div class="portfolio-box">
-          <img src="imagens/PORTFOLIOIMG-.png" alt="Imagem do portfolio" />
+    <!-- projects section -->
+    <section class="projects" id="projects">
+      <h2>Últimos <span style="color: orange;">Projetos</span></h2>
 
-          <div class="portfolio-layer">
-            <h4>Desenvolvimento Web</h4>
-
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis
-              vitae, excepturi numquam sequi architecto cupiditate ipsum nam
-              debitis. Perferendis earum sapiente saepe fugiat adipisci, quia
-              maxime impedit aliquam aperiam libero voluptates laborum! Aliquam
-              veritatis autem iure obcaecati tempora? Pariatur, optio? Quis qui
-              earum ducimus excepturi placeat exercitationem eos veritatis.
-              Provident!
-            </p>
-
-            <a href="#" class="btn"><i class="bx bx-link"></i></a>
-          </div>
+        <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <div class="parallax-bg" style="
+          background-image: url(imagens/brainrot.jpg);
+        " data-swiper-parallax="-23%"></div>
+        <div class="title" data-swiper-parallax="-300">Battle Dungeon Brainrot</div>
+        <div class="subtitle" data-swiper-parallax="-200">Website apresentativo</div>
+        <div class="text" data-swiper-parallax="-100">
+          <p>
+            Desenvolvi esse site visando apresentar o jogo Battle Dungeon Brainrot, um jogo de RPG com dungeon criado por um amigo pro jogo roblox.
+          </p>
         </div>
       </div>
+      <div class="swiper-slide">
+        <div class="parallax-bg" style="
+          background-image: url(imagens/gestaopront.jpg);
+        " data-swiper-parallax="-23%"></div>
+        <div class="title" data-swiper-parallax="-300">Gestao de prontuarios</div>
+        <div class="subtitle" data-swiper-parallax="-200">sistema de gestao de prontuarios médicos</div>
+        <div class="text" data-swiper-parallax="-100">
+          <p>
+            Desenvolvi esse sistema de gestão de prontuários médicos, com o objetivo de facilitar o acesso e a organização dos prontuários dos pacientes.
+          </p>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="parallax-bg" style="
+          background-image: url(imagens/chatsaude.jpg);
+        " data-swiper-parallax="-23%"></div>
+        <div class="title" data-swiper-parallax="-300">Chatsaude</div>
+        <div class="subtitle" data-swiper-parallax="-200">Site de atendimento atraves de chatbot</div>
+        <div class="text" data-swiper-parallax="-100">
+          <p>
+            Estou desenvolvendo esse projeto em colaboração com meu professor da faculdade Carlos, o objetivo é criar um site de atendimento médico através de chatbot, visando facilitar o acesso a informações médicas, essa aplicao automatiza o atendimento e auxiliando pacientes a encontrar profissionais relacionados com seus sintomas.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
+  </div>
+
     </section>
     <!-- /portifolio section -->
 
-    <!-- Sobre section -->
-    <section class="about" id="about">
-      <div class="about-content">
-        <h2>Sobre Mim</h2>
-        <h1><span>web development</span> Student</h1>
-
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam officiis
-          obcaecati animi alias aliquid iure libero iusto, nemo quisquam debitis
-          doloremque pariatur reiciendis molestias consequuntur eos dicta,
-          fugit, quis cumque impedit a. Beatae ex necessitatibus quia, illum
-          ratione repellat iusto tempore amet ea magni animi soluta omnis eaque?
-          Sit, iure!
-        </p>
-
-        <a href="#" class="btn">Saiba Mais</a>
-      </div>
-    </section>
-    <!-- /Sobre section -->
-
     <!-- Contato section -->
     <section class="contact" id="contact">
-      <h2>Fale <span>Comigo!</span></h2>
+      <h2>Fale <span style="color: orange;">Comigo!</span></h2>
 
       <form action="">
         <div class="input-box">
@@ -164,7 +187,15 @@
 
     <footer>
       <p>Copyright &copy; 2025 por Victor</p>
+      <p>linguagens e tecnologias utilizadas:</p>
+      <div class="tech-icons">
+        <i class="bx bxl-html5" title="HTML"></i>
+        <i class="bx bxl-css3" title="CSS"></i>
+        <i class="bx bxl-javascript" title="JavaScript"></i>
+      </div>
     </footer>
   </body>
   <script src="js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="js/swipper.js"></script>
 </html>
