adicionado o botao de voltar ao topo

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
         <a href="#" class="btn">Enviar Mensagem</a>
       </form>
     </section>
+    <a class="back-to-top" onclick="scrollToTop()"><i class='bx bx-chevrons-up'></i></a>
     <!-- /Contato section -->
-
     <footer>
       <p>Copyright &copy; 2025 por Victor</p>
       <p>linguagens e tecnologias utilizadas:</p>
@@ -198,4 +198,5 @@
   <script src="js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="js/swipper.js"></script>
+  <script src="js/topbutton.js"></script>
 </html>
