--- a/index.html
+++ b/index.html
@@ -78,12 +78,11 @@
       <div class="Habilites-container">
         <div class="habilites-box">
           <i class="bx bx-laptop"></i>
-          <h3>Informática Básica</h3>
+          <h3>Informática</h3>
 
           <p>
-            Possuo conhecimento básico em informática, sendo Formatação de
-            computadores, instalação de sistemas operacionais, utilização de
-            softwares como o pacote office.
+            Possuo conhecimentos em informática, sendo Formatação de
+            computadores, instalação de sistemas operacionais,...
           </p>
         </div>
 
