--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
         <i class="bx bxl-javascript" title="JavaScript"></i>
       </div>
     </footer>
+    <!-- FEITO TOTALMENTE POR MIM! VICTOR S. , QUISER ENTRA EM CONTATO SO CHAMA VICTORLANGKAMER@HOTMAIL.COM-->
   </body>
   <script src="js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
